cmake_minimum_required(VERSION 3.28)
project(cmake-basics)
add_executable(HelloWorld hello-world.cpp)
add_executable(Functions functions.cpp)
add_executable(TypesVariablesArithmetics types-variables.cpp)
add_executable(Constants constants.cpp)
add_executable(Arrays arrays.cpp)
add_executable(Pointers pointers.cpp)




